--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Environment variables
 .env
+
+# Virtual environment
+venv/
+
+# User-specific configuration
+playlist_tracker/config.json
+
+# OAuth tokens (sensitive!)
+playlist_tracker/spotify_token_cache.json
+
+# Runtime state and logs
+playlist_tracker/last_run.json
+playlist_tracker/song_log.json
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
